@@ -6,7 +6,6 @@ lib_LTLIBRARIES = libgpsim_modules.la
 
 libgpsim_modules_la_SOURCES = \
 	gpsim_modules.cc \
-	binary_indicator.cc binary_indicator.h \
 	resistor.cc resistor.h \
 	usart.cc usart.h \
 	paraface.cc paraface.h \
